fixed layout issues

--- a/src/_includes/components/css/index.css
+++ b/src/_includes/components/css/index.css
@@ -1,6 +1,5 @@
 main {
   padding: 0;
-  max-width: 100%;
   margin-top: 0;
 }
 
