--- a/src/_includes/components/css/main.css
+++ b/src/_includes/components/css/main.css
@@ -67,9 +67,9 @@ h6 {
 /**********************/
 
 :root {
-  --global-font-family: system-ui, -apple-system, BlinkMacSystemFont,
-    "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
-    "Droid Sans", "Helvetica Neue", Arial, sans-serif;
+  --global-font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+    "Helvetica Neue", Arial, sans-serif;
   --accent-color: #119822;
   --brand-color: hsl(128, 80%, 33%);
   --brand-hue: 128;
@@ -255,6 +255,8 @@ body > footer {
 main {
   padding: 1rem;
   overflow-x: hidden;
+  display: grid;
+  justify-content: center;
 }
 
 p.paragraph-title {
