--- a/src/_includes/components/css/product.css
+++ b/src/_includes/components/css/product.css
@@ -1,5 +1,4 @@
 main {
-  max-width: 100rem;
   margin-top: 5rem;
 }
 
@@ -226,7 +225,7 @@ main h2 {
   width: 50px;
   height: 50px;
   cursor: pointer;
-  border-radius: 8px
+  border-radius: 8px;
 }
 
 .icon-div {
