--- a/src/_includes/components/css/stock-list.css
+++ b/src/_includes/components/css/stock-list.css
@@ -1,6 +1,5 @@
 main {
-  max-width: 100rem;
-  margin-top:5rem
+  margin-top: 5rem;
 }
 
 #stock-data {
