--- a/src/_includes/components/css/submit-order.css
+++ b/src/_includes/components/css/submit-order.css
@@ -1,6 +1,5 @@
 main {
-  max-width: 80rem;
-  margin-top: 5rem
+  margin-top: 5rem;
 }
 
 main input[type="text"],
